--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<py-script>
 from flask import Flask, redirect, render_template, url_for, request
 from replit import web, db
 import requests,random,sys
@@ -246,3 +248,5 @@ def dice():
     return render_template("dice.html",boosting=is_following(web.auth.name)["isFollowingCurrentUser"],profile_pic=request.headers["X-Replit-User-Profile-Image"],name=web.auth.name)
 
 app.run(host="0.0.0.0",port=81,debug=True)
+</py-script>
+    </html>
